# robot_final

./: CMakeLists.txt  README.md  package.xml
213.zips/: CMakeLists.txt  package.xml
213.zips/config/: joint_names_robot_final.yaml
213.zips/launch/: display.launch
213.zips/meshes/: base_link.STL  caster2_link.STL  right_wheel_link.STL
213.zips/urdf/: robot_final.urdf
config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  simple_diff_drive.yaml
launch/: gazebo.launch  gmapping.launch  move_base.launch  start.launch  world.launch
meshes/: caster1_link.STL  left_wheel_link.STL
rviz/: rviz.rviz
src/: detect_markers.cpp
urdf/: robot_final.csv  robot_final.gazebo  robot_final.xacro  robot_final_defaultWheels.xacro
worlds/: world.world  world_small.world
